fixed floppy on mobile + banner hover on weird screen sizes

--- a/sites/all/themes/lezoo/css/style.css
+++ b/sites/all/themes/lezoo/css/style.css
@@ -7229,6 +7229,7 @@ select.form-control#edit-field-music-genre-tid option:hover {
     padding-left: 0px;
     padding-right: 0px;
     background-color: rgba(0, 0, 0, 0);
+    height: 100%;
   }
   .swiper .carousel-inner .carousel-caption h6 {
     padding-left: 15px;
@@ -7250,7 +7251,7 @@ select.form-control#edit-field-music-genre-tid option:hover {
     top: 0px;
     right: 0px;
     padding-left: 15px;
-    border-bottom: solid 6px white;
+    border-bottom: solid 6px;
     font-size: 21px;
   }
   .swiper .carousel-inner .carousel-caption .date .date-number,
@@ -7362,6 +7363,7 @@ select.form-control#edit-field-music-genre-tid option:hover {
   position: absolute;
   top: 0px;
   padding-left: 12px;
+  color: #494949;
 }
 .swiper .carousel-caption .banner-title {
   border-bottom: 2px solid;
@@ -7378,6 +7380,7 @@ select.form-control#edit-field-music-genre-tid option:hover {
 }
 .swiper .carousel-caption .banner-title .field-music-genre {
   display: inline-block;
+  color: #494949;
   font-size: 21px;
   font-style: italic;
   text-transform: lowercase;
@@ -7552,101 +7555,95 @@ select.form-control#edit-field-music-genre-tid option:hover {
   background-color: #000000;
 }
 .flippy {
-  display: none;
+  background-color: #494949;
+  height: 40px;
+  border-bottom: solid 1px #ffffff;
+  padding: 0px 5px !important;
 }
 .flippy span {
   display: none;
 }
-@media screen and (min-width: 768px) {
-  .flippy {
-    display: block;
-  }
-}
 .flippy .prev,
 .flippy .next {
-  position: fixed;
-  top: 100px;
-  z-index: 100;
-  width: 80px!important;
-  height: 140px;
-  overflow: hidden;
   padding: 0px 0px 0px 0px;
-  background-color: rgba(255, 255, 255, 0);
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-}
-.flippy .prev:hover,
-.flippy .next:hover {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.flippy .prev div,
-.flippy .next div {
-  height: 100%;
-  padding: 25px;
-  background: center no-repeat;
-  background-size: cover;
+  height: 40px;
+  top: -8px;
+  position: relative;
 }
 .flippy .prev a,
 .flippy .next a {
-  position: absolute;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  font-size: 15px;
-  font-family: "Oswald", Helvetica, Arial, sans-serif;
-}
-.flippy .prev img,
-.flippy .next img {
-  height: 100%;
-  max-width: none;
-  position: absolute;
-  top: 0px;
-  z-index: -10;
+  display: inline-block;
+  -webkit-transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  transform: scale(0.5);
 }
 .flippy .prev {
-  left: 50%;
-  margin-left: -640px;
-}
-.flippy .prev:after {
-  content: url("../img/flippy_prev.png");
-}
-.flippy .prev:hover {
-  padding-right: 5px;
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-}
-.flippy .prev .month,
-.flippy .prev .date-number {
-  float: right;
-}
-.flippy .next {
-  right: 50%;
-  margin-right: -640px;
-}
-.flippy .next:after {
-  content: url("../img/flippy_next.png");
-}
-.flippy .next:hover {
-  padding-left: 5px;
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-}
-.flippy .next .month,
-.flippy .next .date-number {
   float: left;
 }
-.flippy .month,
-.flippy .date-number {
-  display: none;
+.flippy .prev a {
+  content: url("../img/flippy_prev.png");
 }
-.flippy .month {
-  font-size: 21px;
+@media screen and (min-width: 768px) {
+  .flippy .prev {
+    float: none;
+    left: 50%;
+    margin-left: -640px;
+  }
+  .flippy .prev:hover {
+    padding-right: 5px;
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+  }
 }
-.flippy .date-number {
-  font-size: 25px;
+.flippy .next {
+  float: right;
+}
+.flippy .next a {
+  content: url("../img/flippy_next.png");
+}
+@media screen and (min-width: 768px) {
+  .flippy .next {
+    float: none;
+    right: 50%;
+    margin-right: -640px;
+  }
+  .flippy .next:hover {
+    padding-left: 5px;
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+  }
+}
+@media screen and (min-width: 768px) {
+  .flippy {
+    display: block;
+    border-bottom: none;
+    background-color: transparent;
+  }
+  .flippy .prev,
+  .flippy .next {
+    position: fixed !important;
+    top: 100px !important;
+    z-index: 100;
+    width: 80px!important;
+    height: 140px;
+    background-color: transparent;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+  }
+  .flippy .prev:hover,
+  .flippy .next:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    cursor: pointer;
+  }
+  .flippy .prev a,
+  .flippy .next a {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
 }
 div:not(.footer) .btn {
   font-family: Georgia, "Times New Roman", Times, serif;
