--- a/sites/all/themes/lezoo/less/fronts.less
+++ b/sites/all/themes/lezoo/less/fronts.less
@@ -65,6 +65,7 @@
 				padding-left: 0px;
 				padding-right: 0px;
 				background-color: rgba(0,0,0,0);
+				height: 100%;
 				h6{
 					padding-left: 15px;
 				}
@@ -85,8 +86,9 @@
 					top: 0px;
 					right: 0px;
 					padding-left: 15px;
-					border-bottom: solid 6px white;
+					border-bottom: solid 6px;
 					font-size: @font-size-h3;
+
 					.date-number, .day, .month{
 						display: inline-block;
 						text-align: left;
@@ -197,6 +199,7 @@
 			position: absolute;
 			top: 0px;
 			padding-left: @padding-base-horizontal;
+			color: @secondary-color;
 		}
 
 		.banner-title{
@@ -214,6 +217,7 @@
 			}
 			.field-music-genre{
 				display: inline-block;
+				color: @secondary-color;
 				font-size: @font-size-h3;
 				font-style: italic;
 				text-transform: lowercase;
